# Snake

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Snake.kdev4  check_submodule.py
.VSCodeCounter/2024-11-14_19-38-43/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2024-11-14_19-40-43/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.cache/clangd/index/: Audio.cpp.6275E77CF375C022.idx  Audio.h.62268950902C8D70.idx  GAMESTATE.h.4BBA16DFBA4ABC46.idx  GAMESTATE.h.FD645FD61D05B20D.idx  Player.cpp.88642083F3C41D77.idx  Player.cpp.E634D689726320C6.idx  Player.h.6B5865DF82B790DA.idx  Player.h.90ACF3A5C41A3A23.idx  camera.h.1DD593180C240BEE.idx  cgltf.h.03CF66168C34ADE7.idx  config.h.A14E2E361970AEB0.idx  context.c.B0EFD4EC05478B21.idx  core.c.8E8018DB8656FDF6.idx  dr_mp3.h.D082EAF484D111CA.idx  egl_context.c.893B946CB8F3BB62.idx  egl_context.h.126CFF7FF4FB6BA3.idx  gestures.h.D179593A116A48CD.idx  glad.h.4573355A15E592D3.idx  glfw3.h.25DE1A6F95A4F146.idx  glfw3native.h.80FBECD15F0842F2.idx  glx_context.c.BE208B49535D125E.idx  glx_context.h.15E3AD507A497F8C.idx  init.c.97E318A1A1F96088.idx  input.c.0436F264984A7221.idx  internal.h.29C0CAF2B3EE6DE2.idx  jar_mod.h.EB699C41AB1D0B02.idx  jar_xm.h.D2B24107E9BFFF88.idx  linux_joystick.c.0065644573D0705D.idx  linux_joystick.h.AF99A2EBEFF581DD.idx  main.cpp.9E893EF6E8167403.idx  main.cpp.C8D49E22A6CBAB1E.idx  mappings.h.A5C2F5FE4EAF5E2D.idx  miniaudio.h.36DEDCC7F17DC254.idx  models.c.B57E6F0B6F0476B3.idx  monitor.c.8CB29D71C8394D2B.idx  osmesa_context.c.D7CEAD453D31E1D1.idx  osmesa_context.h.AD9EDF3B20B2EC0E.idx  par_shapes.h.2483E56BBE0AC5AC.idx  posix_thread.c.623BDA227EA36607.idx  posix_thread.h.1E3771CB55028AAC.idx  (+33 more)
.github/workflows/: codeql.yml
.kdev4/: Snake.kdev4
libs/raylib/src/: raudio.c
src/: Audio.cpp  Audio.h  GAMESTATE.h  Player.cpp  Player.h  main.cpp  utility.cpp  utility.h
